fix: fix row-gap between cards

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,7 +22,7 @@
 .card__wrapper {
   display: flex;
   justify-content: center;
-  gap: 14px;
+  row-gap: 14px;
   flex-wrap: wrap;
   column-gap: 80px;
 }
